<resources>
    <!--Description-->
    <string name="desc_app_icon" translatable="false">desc_app_icon</string>

    <string name="app_name">Sn File Manager</string>
    <string name="continue_key">Continue</string>
    <string name="open_source_license"><u>Open source license</u></string>
    <string name="privacy_policy"><u>Privacy policy</u></string>
    <string name="settings">Settings</string>
    <string name="version">Version</string>
    <string name="home">Home</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="folders">Folders</string>
    <string name="archives">Archives</string>
    <string name="settings_desc">Customize design and behavior settings</string>
    <string name="images">Images</string>
    <string name="sounds">Sounds</string>
    <string name="videos">Videos</string>
    <string name="documents">Documents</string>
    <string name="apk_files">Apk files</string>
    <string name="categories">Categories</string>
    <string name="storage">Storage</string>
    <string name="other">Other</string>
    <string name="internal_storage">Internal storage</string>
    <string name="internal">Internal</string>
    <string name="external_storage">External storage</string>
    <string name="available_storage">Available storage %s</string>
    <string name="no_external_storage">External storage not found</string>
    <string name="selected_count">%d items selected</string>
    <string name="select_all">Select all</string>
    <string name="cancel">Cancel</string>
    <string name="search_image_hint">Enter the name of the image</string>
    <string name="nothing_found">Nothing found</string>
    <string name="type_search_image_info">"Type the name of the image you want to search"</string>
    <string name="child_modified" translatable="false">%s</string>
    <string name="file_size" translatable="false">%s - %s </string>
    <string name="permission_message">Access permissions must be granted before the application can perform file operations</string>
    <string name="permission_warning_message">The application cannot work properly without the necessary permissions. Please go to settings and provide necessary permissions</string>
    <string name="click_to_allow">Click to allow</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="apply">Apply</string>
    <string name="all">all</string>
    <string name="confirm">Confirm</string>
    <string name="move">Move</string>
    <string name="conflict_warning">Conflict found in these files</string>
    <string name="delete">Delete</string>
    <string name="copy_key">Copy</string>
    <string name="share">Share</string>
    <string name="detail">Detail</string>
    <string name="skip">Skip</string>
    <string name="keep_both">Keep both</string>
    <string name="overwrite">Overwrite</string>
    <string name="apply_selection_to_all">Apply selection to all</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="delete_warning">Selected files will be deleted</string>
    <string name="path_not_selected">Path not selected</string>
    <string name="no_item">There is nothing here</string>
    <string name="no_app_share">No application found that can share</string>
    <string name="max_share_file">You have exceeded the maximum number of files</string>
    <string name="ok">OK</string>
    <string name="name">Name</string>
    <string name="path">Path</string>
    <string name="size">Size</string>
    <string name="selected_item_count">Selected Item Count</string>
    <string name="total_size">Total Size</string>
    <string name="number_of_children">Number Of Children</string>
    <string name="open_with">Open with</string>
    <string name="no_app_open_with">No application found to open the file</string>
    <string name="last_modified">Last Modified</string>
    <string name="added_date">Added Date</string>
    <string name="loading">Loading</string>
    <string name="error_root_path">Obb and data directories are off-limits for manipulation</string>
    <string name="about_desc">See application details</string>
    <string name="theme">Theme</string>
    <string name="theme_desc">Change app theme</string>
    <string name="title_interface">Interface</string>
    <string name="behavior">Behavior</string>
    <string name="hidden_file">Hidden files</string>
    <string name="hidden_file_on">Showing</string>
    <string name="hidden_file_off">Hiding</string>
    <string name="copying">Copying</string>
    <string name="moving">Moving</string>
    <string name="deleting">Deleting</string>
    <string name="completed">Completed</string>
    <string name="permission_warning_title">Permission warning</string>
    <string name="notification_permission_info">You need to allow notifications to see the progress of operations such as copying, deleting, etc.</string>
    <string name="folder_permission_info">You do not have permission to view this folder</string>
    <string name="search_hint">At least 3 characters</string>
    <string name="start_search_msg">Please enter at least 3 characters to start searching</string>
    <string name="path_conflict_warning">Target and source cannot be the same</string>
    <string name="choose_a_directory">Choose a directory</string>
    <string name="view_github">View on Github</string>
    <string name="licenses">Licenses</string>
    <string name="github"><u>Github</u></string>
    <string name="license"><u>License</u></string>
    <string name="third_party_licenses">Third party licenses</string>
    <string name="media">Media</string>
    <string name="system">System</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="show_store">Show in store</string>
    <string name="create_folder">Create folder</string>
    <string name="create">Create</string>
    <string name="folder_name">Folder name</string>
    <string name="folder_exists_warning">The folder with this name already exists</string>
    <string name="no_folder">There is no folder to display</string>
    <string name="rename">Rename</string>
    <string name="extension">Extension</string>
    <string name="change_ext_warning">Changing the extension may cause the file to become unusable</string>
    <string name="current_file_name_warning">"You entered the current file name"</string>
    <string name="file_exists_warning">The file with this name already exists</string>
    <string name="sort">Sort</string>
    <string name="sort_by">Sort by</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
</resources>