<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/adamina"
        android:padding="@dimen/_10sdp"
        android:text="@string/sort_by"
        android:textColor="@color/first_text_color"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg_criteria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_modified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_modified" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_extension"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extension" />
    </RadioGroup>


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@color/divider_color"
        app:layout_constraintTop_toBottomOf="@id/rg_criteria" />

    <RadioGroup
        android:id="@+id/rg_sort_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        app:layout_constraintBottom_toTopOf="@+id/center_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_ascending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ascending" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_descending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descending" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/center_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:fontFamily="@font/adamina"
            android:padding="@dimen/_5sdp"
            android:text="@string/cancel"
            android:textColor="@color/app_buton_state_list"
            android:textSize="@dimen/_13ssp" />

        <View
            android:layout_width="1dp"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/divider_color" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:fontFamily="@font/adamina"
            android:padding="@dimen/_5sdp"
            android:text="@string/confirm"
            android:textColor="@color/app_buton_state_list"
            android:textSize="@dimen/_13ssp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>