<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color"
        tools:context=".feature.home.HomeFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/adamina"
            android:text="@string/categories"
            android:textColor="@color/first_text_color"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_category_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:backgroundTint="@color/bg_color"
            app:cardElevation="@dimen/_1sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_categories">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:stretchColumns="0,1,2">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/_1sdp"
                    android:layout_weight="1">

                    <com.sn.snfilemanager.view.component.ImageButton
                        android:id="@+id/ib_images"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:btnImage="@drawable/ic_image"
                        app:btnText="@string/images" />

                    <com.sn.snfilemanager.view.component.ImageButton
                        android:id="@+id/ib_sound"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:btnImage="@drawable/ic_sound"
                        app:btnText="@string/sounds" />


                    <com.sn.snfilemanager.view.component.ImageButton
                        android:id="@+id/ib_video"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:btnImage="@drawable/ic_video"
                        app:btnText="@string/videos" />

                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/_1sdp"
                    android:layout_weight="1">

                    <com.sn.snfilemanager.view.component.ImageButton
                        android:id="@+id/ib_documents"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:btnImage="@drawable/ic_document"
                        app:btnText="@string/documents" />

                    <com.sn.snfilemanager.view.component.ImageButton
                        android:id="@+id/ib_archives"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:btnImage="@drawable/ic_archive"
                        app:btnText="@string/archives" />

                    <com.sn.snfilemanager.view.component.ImageButton
                        android:id="@+id/ib_apk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:btnImage="@drawable/ic_android"
                        app:btnText="@string/apk_files" />

                </TableRow>

            </TableLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_storage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:fontFamily="@font/adamina"
            android:text="@string/storage"
            android:textColor="@color/first_text_color"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_category_card" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_storage_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:backgroundTint="@color/bg_color"
            app:layout_constraintTop_toBottomOf="@+id/tv_storage">

            <com.sn.snfilemanager.view.component.HrImageButton
                android:id="@+id/btn_file"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_phone"
                app:subTitle="20gb"
                app:title="@string/internal_storage" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_external_storage_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:backgroundTint="@color/bg_color"
            app:layout_constraintTop_toBottomOf="@+id/cv_storage_card">

            <com.sn.snfilemanager.view.component.HrImageButton
                android:id="@+id/btn_external_file"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_sd_card"
                app:subTitle="20gb"
                app:title="@string/external_storage" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_short_cut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:fontFamily="@font/adamina"
            android:text="@string/short_cut"
            android:textColor="@color/first_text_color"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_external_storage_card" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_download"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:backgroundTint="@color/bg_color"
            app:layout_constraintTop_toBottomOf="@+id/tv_short_cut">

            <com.sn.snfilemanager.view.component.HrImageButton
                android:id="@+id/btn_download"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_download"
                app:subTitle="@string/download_desc"
                app:title="@string/downloads" />

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>