<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_5sdp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/adamina"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/first_text_color"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/app_name" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:drawableStart="@drawable/ic_circle_small"
        android:drawablePadding="@dimen/_5sdp"
        android:fontFamily="@font/adamina"
        android:padding="@dimen/_5sdp"
        android:text="@string/github"
        android:textColor="@color/main_color"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mtv_name" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_license"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:drawableStart="@drawable/ic_circle_small"
        android:drawablePadding="@dimen/_5sdp"
        android:fontFamily="@font/adamina"
        android:padding="@dimen/_5sdp"
        android:text="@string/license"
        android:textColor="@color/main_color"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mtv_github" />

</androidx.constraintlayout.widget.ConstraintLayout>