<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.sn.snfilemanager.feature.about.AboutViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_color"
            app:liftOnScroll="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/bg_color"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp"
                app:navigationContentDescription="@string/about"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:title="@string/about"
                app:titleTextColor="@color/first_text_color" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_other"
                style="@style/Widget.MaterialFiles.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/bg_color"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/mtv_app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:drawableStart="@drawable/ic_app_icon_small"
                        android:drawablePadding="@dimen/_10sdp"
                        android:fontFamily="@font/adamina"
                        android:gravity="center"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/app_name"
                        android:textColor="@color/first_text_color"
                        android:textSize="@dimen/_15ssp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cv_external_storage_card" />

                    <com.sn.snfilemanager.view.component.HrImageButton
                        android:id="@+id/btn_version"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:padding="@dimen/_10sdp"
                        app:icon="@drawable/ic_info_small"
                        app:subTitle="@{vm.versionLiveData}"
                        app:title="@string/version" />

                    <com.sn.snfilemanager.view.component.HrImageButton
                        android:id="@+id/btn_github"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:padding="@dimen/_10sdp"
                        app:icon="@drawable/ic_github"
                        app:subTitle="@null"
                        app:title="@string/view_github" />

                    <com.sn.snfilemanager.view.component.HrImageButton
                        android:id="@+id/btn_privacy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:padding="@dimen/_10sdp"
                        app:icon="@drawable/ic_privacy"
                        app:subTitle="@null"
                        app:title="@string/privacy_policy" />

                    <com.sn.snfilemanager.view.component.HrImageButton
                        android:id="@+id/btn_license"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:padding="@dimen/_10sdp"
                        app:icon="@drawable/ic_license"
                        app:subTitle="@null"
                        app:title="@string/licenses" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>